--- a/package.json
+++ b/package.json
@@ -5,10 +5,17 @@
   "repository": "git@github.com:wilf312/react-typescript-docgen.git",
   "author": "OkadaGenya <g.okada.wilf+github@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
+  },
   "devDependencies": {
     "@storybook/addon-info": "^5.0.11",
+    "@storybook/cli": "^5.0.11",
+    "@storybook/react": "^5.0.11",
     "@types/jest": "^24.0.11",
     "@types/storybook__react": "^4.0.1",
+    "babel-loader": "^8.0.5",
     "jest": "^24.7.1",
     "react-docgen-typescript-loader": "^3.1.0",
     "ts-jest": "^24.0.2",
